<resources>
	<string name="app_name">Note-taking</string>
	<string name="resend_otp_code">Resend OTP code</string>
	<string name="menu_home">Home</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
	<string name="hint_new_note_title">Review your note and choose a title</string>
	<string name="image">"Images: "</string>
	<string name="add">Add</string>
	<string name="note_content">Note Content:</string>
	<string name="hint_note_content">Write your note here</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="confirm_exit">Are you sure you want to exit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="username">"Username: "</string>
	<string name="phone">"Phone: "</string>
	<string name="status">"Status: "</string>
	<string name="reset_pass">Reset password</string>
	<string name="back_to_login">Go back to login?</string>
	<string name="receive_OTP_code">Receive your OTP code</string>
	<string name="hint_home_content_note">Write something you want to note...</string>
	<string name="choose_title">Choose title</string>
	<string name="txt_home_voice">Wanna voice your current expression? It will disappear times by times</string>
	<string name="home_title_image_video">Note your image/video:</string>
	<string name="title_login">Login</string>
	<string name="forgot_password">Forgot your password?</string>
	<string name="register">Register</string>
	<string name="conent_login">Login</string>
	<string name="enter_OTP_code">Enter OTP code</string>
	<string name="confirm_otp_hint_content">The OTP code sent to your phone</string>
	<string name="confirm_OTP_btn">Confirm OTP</string>
	<string name="title_register">Register</string>
</resources>