<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical">
	
	<LinearLayout
		android:id="@+id/llTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent">
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textSize="20sp" />
		
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/etTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_new_note_title" />
		</com.google.android.material.textfield.TextInputLayout>
	</LinearLayout>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/llTitle"
		android:paddingBottom="150dp">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/image"
					android:textSize="20sp" />
				
				<LinearLayout
					android:id="@+id/llImages"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
				
				</LinearLayout>
				
				<Button
					android:id="@+id/btnAddImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/add" />
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/note_content"
					android:textSize="20sp" />
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/etTextContent"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/hint_note_content" />
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent">
		
		<Button
			android:id="@+id/btnSave"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/save"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/btnCancel" />
		
		<Button
			android:id="@+id/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/btnSave"
			app:layout_constraintRight_toRightOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>