<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".ui.login.LoginFragment">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center"
		android:orientation="vertical">
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/rounded_button_background"
			android:backgroundTint="#d9d9d9"
			
			android:gravity="center">
			
			<ImageView
				android:layout_width="205dp"
				android:layout_height="142dp"
				android:layout_gravity="center"
				android:src="@drawable/smile_wink" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title_login"
				android:textSize="30dp"
				android:textStyle="bold" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<EditText
					android:id="@+id/et_email"
					android:layout_width="match_parent"
					android:layout_height="55dp"
					android:layout_marginHorizontal="20dp"
					android:layout_marginTop="20dp"
					android:background="@drawable/rounded_button_background"
					android:backgroundTint="#FFEC85"
					android:hint="Your email..."
					android:text="vkq265@gmail.com"
					android:paddingHorizontal="15dp" />
				
				<EditText
					android:id="@+id/et_password"
					android:layout_width="match_parent"
					android:layout_height="55dp"
					android:layout_marginHorizontal="20dp"
					android:layout_marginTop="20dp"
					android:background="@drawable/rounded_button_background"
					android:backgroundTint="#FFEC85"
					
					android:hint="Password..."
					android:inputType="textPassword"
					android:text="123"
					android:paddingHorizontal="15dp" />
				
				<TextView
					android:id="@+id/tv_forget_password"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_gravity="end"
					android:layout_marginHorizontal="20dp"
					android:layout_marginTop="20dp"
					android:clickable="true"
					android:gravity="center"
					android:text="@string/forgot_password"
					android:textSize="16dp"
					android:textStyle="italic"
					
					/>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="40dp"
					android:gravity="center"
					android:orientation="horizontal"
					
					>
					
					<Button
						android:id="@+id/btn_register"
						style="@style/Widget.Material3.Button"
						android:layout_width="120dp"
						android:layout_height="50dp"
						android:layout_gravity="start"
						android:layout_marginRight="30dp"
						android:backgroundTint="#FFA800"
						android:text="@string/register"
						android:textColor="@color/black"
						android:textSize="16dp"
						app:cornerRadius="10dp" />
					
					<Button
						android:id="@+id/btn_login"
						style="@style/Widget.Material3.Button"
						android:layout_width="120dp"
						android:layout_height="50dp"
						android:layout_gravity="end"
						android:backgroundTint="#FFA800"
						android:text="@string/conent_login"
						android:textColor="@color/black"
						android:textSize="16dp"
						app:cornerRadius="10dp" />
				</LinearLayout>
				<Button
					android:id="@+id/btn_lg_vi"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Tiếng việt"/>
				<Button
					android:id="@+id/btn_lg_eng"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="English"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

</FrameLayout>